# LlamaBot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-llamapress.yml  docker-compose.yml  langgraph.json  pyproject.toml  requirements.txt
.github/badges/: stars_last10.json
app/: .coverage  Dockerfile  init_pg_checkpointer.py  langgraph.json  main.py  pytest.ini  requirements.txt
app/agents/llamabot_v1/: nodes.py
app/agents/llamapress/: clone_agent.py  helpers.py  html_agent.py  nodes.new.py  nodes.old.py  nodes.py
app/agents/llamapress_legacy/: state.py
app/agents/public_leonardo/: nodes.py
app/agents/react_agent/: nodes.py
app/tests/: conftest.py  test_agents.py  test_app.py  test_websocket.py
app/tests/agents/llamapress/: clone_agent_test.py  test_nodes.py
app/websocket/: request_handler.py  web_socket_handler.py
backend/: Dockerfile  README.md  app.py  init_pg_checkpointer.py  run_tests.py
backend/agents/llamabot_v1/: nodes.py
backend/tests/: test_agents.py  test_integration.py
backend/websocket/: connection_manager.py  request_handler.py  web_socket_connection_manager.py  web_socket_handler.py  websocket_handler.py
docs/: DEPLOY.md
docs/dev_logs/: 0.1.14  0.1.15
